--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>{{ title }}</title>
     <meta name="description" content="{{ description }}" />
 
-    <meta property="og:title" content="{{ title }}" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="{{ url }}" />
-    <meta property="og:image" content="./assets/share.png" />
-    <meta property="og:description" content="{{ description }}" />
+    <meta name="og:title" content="{{ title }}" />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="{{ url }}" />
+    <meta name="og:image" content="./assets/share.png" />
+    <meta name="og:description" content="{{ description }}" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="{{ twitter }}" />
